; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_MemStr.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_MemStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MemStr.Buffer = internal global [1024 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [6 x i8] c"%g Mb\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"%g Kb\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"%g bytes\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @MemStr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @MemStr(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp sgt i32 %3, 1048576
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = sitofp i32 %6 to double
  %8 = fdiv double %7, 0x4130000000000000
  %9 = call i32 @sprintf(i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @MemStr.Buffer, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), double %8)
  br label %23

10:                                               ; preds = %1
  %11 = load i32, i32* %2, align 4
  %12 = icmp sgt i32 %11, 1024
  br i1 %12, label %13, label %18

13:                                               ; preds = %10
  %14 = load i32, i32* %2, align 4
  %15 = sitofp i32 %14 to double
  %16 = fdiv double %15, 1.024000e+03
  %17 = call i32 @sprintf(i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @MemStr.Buffer, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), double %16)
  br label %22

18:                                               ; preds = %10
  %19 = load i32, i32* %2, align 4
  %20 = sitofp i32 %19 to double
  %21 = call i32 @sprintf(i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @MemStr.Buffer, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), double %20)
  br label %22

22:                                               ; preds = %18, %13
  br label %23

23:                                               ; preds = %22, %5
  ret i8* getelementptr inbounds ([1024 x i8], [1024 x i8]* @MemStr.Buffer, i64 0, i64 0)
}

declare dso_local i32 @sprintf(i8*, i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
